--- a/src/sass/blocks/_hero.sass
+++ b/src/sass/blocks/_hero.sass
@@ -1,17 +1,18 @@
 .header
   background: url("../img/hero/hero-bg.png"), #e3eaf0
   background-repeat: no-repeat
-  background-position: 45.5vw 60%
+  background-position: calc(50vw - 95px) 60%
 .hero
-  padding: 180px 0 200px
+  padding: 182px 0 200px
   &__text
     margin-bottom: 45px
     max-width: 700px
   &__title
     margin: 0
-    margin-bottom: 26px
+    margin-bottom: 28px
     font-size: 60px
     letter-spacing: 0.7px
+    line-height: 68px
     br:last-child
       display: none
   &__button
