--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -1,5 +1,6 @@
 *
   box-sizing: border-box
+  
 body
   +reg
   font-size: 18px
@@ -20,9 +21,10 @@ a
 .section
   &__title
     font-size: 42px
+    letter-spacing: 0.45px
   &__subtitle
     font-size: 14px
-    letter-spacing: 0.84px
+    letter-spacing: 0.95px
     text-transform: uppercase
     color: $text-grey
 
@@ -60,6 +62,7 @@ input[type="radio"]
   .section
     &__title
       font-size: 24px
+      line-height: 32px
 
 @media (max-width: 768px)
   .button
