--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -17,9 +17,42 @@
     font-size: 16px
   &__button
     width: 200px
+    padding: 11px 0
+    font-size: 12px
     color: $text-grey
     border-color: #363636
+    &:hover
+      color: lighten($text-grey, 30%)
     &:first-child
-      margin-right: 50px
+      margin-right: 46px
     &:last-child
-      margin-left: 15px
+      margin-left: 11px
+
+@media (max-width: 1200px)
+  .footer
+    &__buttons
+      display: flex
+      flex-direction: column
+    &__button
+      &:first-child
+        margin: 0 0 10px
+      &:last-child
+        margin: 10px 0 0
+
+@media (max-width: 576px)
+  .footer
+    padding: 40px 0 60px
+    &-block
+      flex-direction: column
+      align-items: flex-start
+      max-width: 290px
+      margin: auto
+    &__title
+      margin-bottom: 34px
+    &__phone
+      margin-bottom: 15px
+    &__button
+      &:first-child
+        margin-bottom: 30px
+      &:last-child
+        margin-top: 15px
