--- a/src/sass/blocks/_test.sass
+++ b/src/sass/blocks/_test.sass
@@ -1,26 +1,23 @@
 .test
-  padding: 24px 0
+  padding: 22px 0
+  &__text
+    text-align: center
   &__title
     max-width: 740px
     margin: auto
-    margin-bottom: 54px
-    text-align: center
+    margin-bottom: 59px
   &__subtitle
     display: block
     margin-bottom: 18px
-    text-align: center
   &__card
-    display: flex
-    align-items: center
+    display: grid
+    grid-template-columns: minmax(0, 540px) minmax(280px, 640px)
     box-shadow: 0 10px 67px 4px rgba(0, 0, 0, 0.1)
     border-radius: 6px
 .card
   &__image
     position: relative
     display: flex
-    z-index: -999
-    flex-basis: 540px
-    height: 505px
     background-color: #e3eaf0
     border-top-left-radius: 6px
     border-bottom-left-radius: 6px
@@ -37,35 +34,32 @@
     span
       position: relative
       top: 71px
-      left: 6px
+      left: 8px
       +thin
       font-size: 140px
       font-weight: 400
       color: #fff
     &_small
       display: none
-      margin-bottom: 10px
+      margin-bottom: 8px
       font-size: 14px
       span
         color: $text-grey
   &__text
-    display: flex
-    flex-direction: column
-    justify-content: space-between
-    flex-basis: 540px
-    margin: 0 60px
+    grid-column: 2 / 3
+    padding: 52px 100px 90px 60px
   &__line
-    max-width: 480px
     width: 100%
     height: 8px
-    margin-bottom: 57px
+    margin-bottom: 51px
     border-radius: 4px
     background-color: #e7e7e7
   &__title
-    width: 295px
+    width: 300px
     margin: 0 0 42px
     font-size: 24px
     line-height: 34px
+    letter-spacing: 0.45px
   &__label
     color: $text-add
     font-weight: 400
@@ -77,7 +71,6 @@
     width: 160px
     height: 50px
     padding: 0
-
 
 .card__input:checked + label,
 .card__input:not(:checked) + label
@@ -91,10 +84,10 @@
 .card__input:not(:checked) + label:before
   content: ''
   position: absolute
-  left: 0
-  top: -9px
-  width: 34px
-  height: 34px
+  left: 2px
+  top: -7px
+  width: 30px
+  height: 30px
   border: 2px solid #e7e7e7
   border-radius: 100%
   background: #fff
@@ -121,53 +114,58 @@
 
 @media (max-width: 991px)
   .test
+    &__card
+      grid-template-columns: 0 1fr
     &__title
-      max-width: 420px
+      max-width: 540px
   .card
-    &-block
-      padding: 50px 25px
-    &__text
-      flex-basis: 840px
-    &__title
-      width: auto
     &__image
       display: none
+    &__text
+      padding: 48px 60px 70px
     &__number
       &_small
         display: block
     &__line
-      max-width: 840px
+      margin-bottom: 55px
+    &__title
+      max-width: 295px
+      font-size: 18px
+      line-height: 28px
+    &__label
+      font-size: 16px
+      line-height: 26px
+      &:not(:last-of-type)
+        margin-bottom: 25px
 
 @media (max-width: 768px)
-  .card
-    &__text
-      margin: 0
+  .test
+    padding: 25px 0
     &__title
-      width: 295px
+      margin-bottom: 32px
 
 @media (max-width: 576px)
   .test
     &__text
       max-width: 290px
       margin: auto
-    &__subtitle
-      max-width: 230px
-      margin: 0 0 18px
-      text-align: left
-    &__title
-      max-width: 230px
-      margin: 0 0 54px
       text-align: left
   .card
     &__text
-      flex-basis: 240px
-      margin: auto
+      padding: 48px 25px 70px
     &__title
       max-width: 230px
-      font-size: 18px
-      line-height: 28px
+      margin-bottom: 30px
     &__label
-      font-size: 16px
-      line-height: 26px
+      &:not(:last-of-type)
+        margin-bottom: 15px
     &__buttons
-      margin-top: 50px
+      margin-top: 45px
+  
+  .card__input:checked + label:before,
+  .card__input:not(:checked) + label:before
+    top: 5px
+  
+  .card__input:checked + label:after,
+  .card__input:not(:checked) + label:after
+    top: 16px
