--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -23,6 +23,7 @@
     border-color: #363636
     &:hover
       color: lighten($text-grey, 30%)
+      border-color: lighten(#363636, 30%)
     &:first-child
       margin-right: 46px
     &:last-child
