--- a/src/sass/blocks/_test.sass
+++ b/src/sass/blocks/_test.sass
@@ -12,8 +12,52 @@
   &__card
     display: grid
     grid-template-columns: minmax(0, 540px) minmax(280px, 640px)
+    grid-template-rows: 505px
     box-shadow: 0 10px 67px 4px rgba(0, 0, 0, 0.1)
     border-radius: 6px
+    // &:not(:nth-child(3))
+    //   display: none
+  &__input
+    width: 100%
+    height: 50px
+    margin-bottom: 20px
+    padding-left: 19px
+    border-radius: 6px
+    border: 1px solid #e4e4e4
+  &__checkbox
+    display: none
+  &__accept
+    position: relative
+    display: block
+    max-width: 440px
+    margin-top: 24px
+    margin-bottom: 21px
+    padding-left: 45px
+    font-size: 14px
+    font-weight: 400
+    line-height: 24px
+    a
+      display: inline-block
+      color: $link-c
+      &:hover
+        color: lighten($link-c, 10%)
+    &::before
+      content: ''
+      position: absolute
+      top: 3px
+      left: 1px
+      width: 22px
+      height: 22px
+      border-radius: 6px
+      border: 1px solid #e4e4e4
+      cursor: pointer
+  &__checkbox:checked + label::before
+    background: url("../img/request/icon_check.svg")
+    background-repeat: no-repeat
+    background-position: 50% 50%
+.input__wrapper
+  max-width: 440px
+
 .card
   &__image
     position: relative
@@ -23,7 +67,7 @@
     border-bottom-left-radius: 6px
     img
       margin: auto
-      width: 253px
+      object-fit: contain
   &__number
     position: absolute
     top: -37px
@@ -35,6 +79,7 @@
       position: relative
       top: 71px
       left: 8px
+      margin-right: 20px
       +thin
       font-size: 140px
       font-weight: 400
@@ -55,12 +100,12 @@
     border-radius: 4px
     background-color: #e7e7e7
   &__title
-    width: 300px
     margin: 0 0 42px
     font-size: 24px
     line-height: 34px
     letter-spacing: 0.45px
   &__label
+    display: block
     color: $text-add
     font-weight: 400
     &:not(:last-of-type)
@@ -71,6 +116,42 @@
     width: 160px
     height: 50px
     padding: 0
+    &_prev
+      margin-right: 15px
+    &_submit
+      width: 100%
+    &_final
+      width: 100%
+      margin: 34px 0 28px
+  &-block
+    &:first-child
+      .card__title
+        max-width: 300px
+    &:nth-child(3),
+    &:nth-child(4)
+      grid-template-rows: 565px
+      .card__label
+        display: inline-block
+        width: 198px
+    &:nth-child(4)
+      .card__buttons
+        margin-top: 25px
+  &__final
+    line-height: 26px
+    font-weight: 400
+    color: $text-grey
+    br
+      display: none
+    span
+      color: #000000
+      font-weight: 600
+  &__link
+    display: block
+    font-size: 14px
+    font-weight: 400
+    color: $link-c
+    &:hover
+        color: lighten($link-c, 10%)
 
 .card__input:checked + label,
 .card__input:not(:checked) + label
@@ -78,7 +159,6 @@
   padding-left: 50px
   cursor: pointer
   line-height: 20px
-  display: inline-block
 
 .card__input:checked + label:before,
 .card__input:not(:checked) + label:before
@@ -111,6 +191,12 @@
 .card__input:checked + label:after 
   opacity: 1
   transform: scale(1)
+
+@media (max-width: 1200px)
+  .card
+    &__image
+      img
+        width: 70%
 
 @media (max-width: 991px)
   .test
@@ -156,16 +242,26 @@
     &__title
       max-width: 230px
       margin-bottom: 30px
-    &__label
-      &:not(:last-of-type)
-        margin-bottom: 15px
     &__buttons
       margin-top: 45px
-  
-  .card__input:checked + label:before,
-  .card__input:not(:checked) + label:before
-    top: 5px
-  
-  .card__input:checked + label:after,
-  .card__input:not(:checked) + label:after
-    top: 16px
+    &-block
+      grid-template-rows: auto
+      &:first-child
+        .card__input:checked + label:before,
+        .card__input:not(:checked) + label:before
+          top: 5px
+        .card__input:checked + label:after,
+        .card__input:not(:checked) + label:after
+          top: 16px
+        .card__label
+          &:not(:last-of-type)
+            margin-bottom: 15px
+      &:nth-child(3),
+      &:nth-child(4)
+        grid-template-rows: auto
+    &__button
+      &_prev
+        margin-bottom: 15px
+    &__final
+      br
+        display: block
