--- a/src/sass/blocks/_request.sass
+++ b/src/sass/blocks/_request.sass
@@ -130,6 +130,7 @@
     &__link
       flex-basis: 50px
       width: 180px
+      margin: auto
       margin-bottom: 15px
 
 @media (max-width: 576px)
@@ -146,3 +147,5 @@
       padding: 0
     &__description
       line-height: 24px
+    &__link
+      margin: 0 0 15px
