--- a/src/sass/blocks/_test.sass
+++ b/src/sass/blocks/_test.sass
@@ -15,8 +15,8 @@
     grid-template-rows: 505px
     box-shadow: 0 10px 67px 4px rgba(0, 0, 0, 0.1)
     border-radius: 6px
-    // &:not(:nth-child(3))
-    //   display: none
+    &:not(:nth-child(1))
+      display: none
   &__input
     width: 100%
     height: 50px
@@ -121,8 +121,11 @@
     &_submit
       width: 100%
     &_final
-      width: 100%
+      width: 300px
       margin: 34px 0 28px
+      padding: 19px 0
+      text-align: center
+      
   &-block
     &:first-child
       .card__title
