--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2077,11 +2077,63 @@ input[type="radio"] {
   font-size: 32px;
   background: none;
   cursor: pointer;
+  outline-style: none;
 }
 
 .modal__cross:hover {
   color: #8f8f8f;
   background: none;
+}
+
+.modal-request {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.modal-request__wrapper {
+  position: relative;
+  max-width: 1180px;
+  width: 100%;
+  margin: auto;
+  background: #ffffff;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.modal-request__image {
+  padding: 50px 65px 0;
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+  background: url("../img/request/iphone2.png"), #e3eaf0;
+  background-repeat: no-repeat;
+  background-position: 50% 100%;
+}
+
+.modal-request__title {
+  display: block;
+  max-width: 350px;
+  margin: 0;
+  margin-left: 13px;
+  margin-bottom: 55px;
+}
+
+.modal-request__subtitle {
+  max-width: 430px;
+  margin: 0 0 26px;
+  font-size: 24px;
+  line-height: 34px;
+}
+
+.modal-request-block {
+  max-width: 480px;
+  width: 100%;
+  margin: 62px 60px;
+}
+
+.modal-request__link {
+  -ms-flex-preferred-size: 147px;
+      flex-basis: 147px;
 }
 
 .offer__wrapper {
@@ -2116,11 +2168,30 @@ input[type="radio"] {
 }
 
 @media (max-width: 1200px) {
+  .modal-request-block {
+    padding: 0;
+  }
+  .modal-request__image {
+    background-size: 34vw;
+  }
+  .modal-request__wrapper {
+    margin: auto 15px;
+  }
   .offer__wrapper {
     margin: auto 15px;
   }
   .offer__text {
     margin: 60px 15px 40px 60px;
+  }
+}
+
+@media (max-width: 991px) {
+  .modal-request__image {
+    display: none;
+  }
+  .modal-request-block {
+    margin: auto;
+    padding: 80px 0;
   }
 }
 
@@ -2137,5 +2208,22 @@ input[type="radio"] {
   .offer__cross {
     top: 5px;
     right: 10px;
+  }
+  .modal-request-block {
+    padding: 40px 0;
+  }
+  .modal-request__link {
+    -ms-flex-preferred-size: 50px;
+        flex-basis: 50px;
+  }
+}
+
+@media (max-width: 576px) {
+  .modal-request__wrapper {
+    margin: auto 0;
+  }
+  .modal-request-block {
+    max-width: 290px;
+    padding: 20px 0;
   }
 }
