--- a/src/sass/blocks/_modal.sass
+++ b/src/sass/blocks/_modal.sass
@@ -21,7 +21,7 @@
       color: $text-grey
       background: none
   &-request
-    display: flex
+    display: none
     &__wrapper
       position: relative
       max-width: 1180px
