--- a/src/sass/blocks/_test.sass
+++ b/src/sass/blocks/_test.sass
@@ -98,7 +98,6 @@
     height: 8px
     margin-bottom: 51px
     border-radius: 4px
-    background-color: #e7e7e7
   &__title
     margin: 0 0 42px
     font-size: 24px
@@ -124,21 +123,38 @@
       width: 300px
       margin: 34px 0 28px
       padding: 19px 0
-      text-align: center
-      
+      text-align: center   
   &-block
     &:first-child
+      .card__line
+        background-color: #e7e7e7
       .card__title
         max-width: 300px
-    &:nth-child(3),
-    &:nth-child(4)
+    &:nth-child(2)
+      .card__line
+        background: rgb(4,122,203)
+        background: linear-gradient(90deg, rgba(4,122,203,1) 25%, rgba(231,231,231,1) 25%, rgba(231,231,231,1) 100%)
+    &:nth-child(3)
       grid-template-rows: 565px
+      .card__line
+        background: rgb(4,122,203)
+        background: linear-gradient(90deg, rgba(4,122,203,1) 50%, rgba(231,231,231,1) 50%, rgba(231,231,231,1) 100%)
       .card__label
         display: inline-block
         width: 198px
     &:nth-child(4)
+      grid-template-rows: 565px
+      .card__line
+        background: rgb(4,122,203)
+        background: linear-gradient(90deg, rgba(4,122,203,1) 75%, rgba(231,231,231,1) 75%, rgba(231,231,231,1) 100%)
+      .card__label
+        display: inline-block
+        width: 198px
       .card__buttons
         margin-top: 25px
+    &:nth-child(5)
+      .card__line
+        background: rgb(4,122,203)
   &__final
     line-height: 26px
     font-weight: 400
